# RealTime-ML-Drift-Monitoring

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  learning_log.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml
config/: config.yaml
data/processed/: test.parquet  train.parquet
grafana/provisioning/dashboards/: dashboard.json
hf_space/: app.py  requirements.txt
prometheus/: alert_rules.yml  prometheus.yml
research-notes/: approach.md
scripts/: run_simulation.py
src/: exceptions.py  logger.py
src/api/: app.py
src/dashboard/: streamlit_app.py
src/data/: dataset.py  schemas.py  validation.py
src/model/: predict.py  train.py
src/monitoring/: drift_detector.py  drift_simulator.py  metrics.py  shap_drift.py
tests/: test_api.py  test_dataset.py  test_drift_detector.py  test_drift_simulator.py  test_metrics.py  test_scaffold.py  test_shap_drift.py  test_streamlit_app.py  test_train.py  test_validation.py
utils/: seed.py
