[project]
name = "b5-drift-monitor"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:builtin type [Ss]wig:DeprecationWarning",
]

[tool.interrogate]
ignore-init-method = true
fail-under = 80
